This will prevent labels above inputs from wrapping when translated.

--- a/app/styles/common/_formElements.scss
+++ b/app/styles/common/_formElements.scss
@@ -53,6 +53,8 @@ label {
   &.pointer {
     cursor: pointer;
   }
+  // for translations, do not allow long labels to wrap.
+  white-space: nowrap;
 }
 
 input, select, textarea {
